--- a/Minefield/Minefield.csproj
+++ b/Minefield/Minefield.csproj
@@ -122,5 +122,14 @@
   <ItemGroup>
     <None Include="Resources\Up.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\restart.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Show.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hide.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
